# ics2rem

./: CMakeLists.txt  README.md  README.text  TODO  main.cpp
src/: CMakeLists.txt  IcalComponent.hpp  IcalDuration.hpp  IcalParser.hpp  IcalTime.hpp  Ics.cpp
